Add signup verification APIs
